--- a/.github/workflows/PrValidation.yml
+++ b/.github/workflows/PrValidation.yml
@@ -8,7 +8,7 @@ jobs:
     name: "Build flatpak and run tests"
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/flathub-infra/flatpak-github-actions:kde-6.8
+      image: bilelmoussaoui/flatpak-github-actions:kde-6.7
       options: --privileged
     steps:
       - uses: actions/checkout@v4
@@ -16,5 +16,5 @@ jobs:
         with:
           bundle: photobox.flatpak
           manifest-path: de.matnel.photobox.Devel.yml
-          cache-key: flatpak-infra-builder-${{ github.sha }}
+          cache-key: flatpak-builder-${{ github.sha }}
           run-tests: true
