--- a/.github/workflows/DeployDocs.yml
+++ b/.github/workflows/DeployDocs.yml
@@ -9,6 +9,9 @@ jobs:
   build:
     name: Build Docusaurus
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: "Documentation"
     steps:
       - uses: actions/checkout@v4
         with:
@@ -31,12 +34,15 @@ jobs:
   deploy:
     name: Deploy to GitHub Pages
     needs: build
+    runs-on: ubuntu-latest
+    defaults:
+        run:
+          working-directory: "Documentation"
 
     permissions:
       pages: write
       id-token: write
 
-    runs-on: ubuntu-latest
 
     environment:
         name: github-pages
