--- a/.github/workflows/DeployDocs.yml
+++ b/.github/workflows/DeployDocs.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           node-version: 18
           cache: npm
+          cache-dependency-path: "./Documentation"
 
       - name: Install dependencies
         run: npm install --frozen-lockfile
