--- a/.github/workflows/DeployDocs.yml
+++ b/.github/workflows/DeployDocs.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: "Documentation"
+        working-directory: "./Documentation"
     steps:
       - uses: actions/checkout@v4
         with:
@@ -20,11 +20,12 @@ jobs:
         with:
           node-version: 18
           cache: npm
+          cache-dependency-path: "./Documentation"
 
       - name: Install dependencies
         run: npm install --frozen-lockfile
       - name: Build website
-        run: npm build
+        run: npm run build
 
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
@@ -37,7 +38,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
         run:
-          working-directory: "Documentation"
+          working-directory: "./Documentation"
 
     permissions:
       pages: write
