--- a/Photobox/Core/CMakeLists.txt
+++ b/Photobox/Core/CMakeLists.txt
@@ -49,6 +49,8 @@ qt_add_qml_module(
         SystemStatusModel.hpp
         SystemStatusClient.hpp
         SystemStatusClient.cpp
+        Countdown.hpp
+        Countdown.cpp
     RESOURCES
         Fonts/GreatVibes/GreatVibes-Regular.ttf
         Fonts/Roboto/Roboto-Regular.ttf
