--- a/Photobox/CMakeLists.txt
+++ b/Photobox/CMakeLists.txt
@@ -5,6 +5,9 @@ add_subdirectory(Peripheral)
 add_subdirectory(Ui)
 #add_subdirectory(Lumix)
 add_subdirectory(GPhoto2)
-add_subdirectory(App)
+add_subdirectory(Settings)
 add_subdirectory(CollageEditorApp)
+
+add_subdirectory(App)
+add_subdirectory(SettingsApp)
 add_subdirectory(SignalTracer)
