--- a/Photobox/Settings/CMakeLists.txt
+++ b/Photobox/Settings/CMakeLists.txt
@@ -2,8 +2,9 @@ qt_add_qml_module(
     PhotoboxSettings
     URI "Photobox.Settings"
     STATIC
-    SOURCES
-
+    QML_FILES
+        PrinterSettingsPage.qml
+        ProjectSettingsPage.qml
 )
 add_library(Photobox::Settings ALIAS PhotoboxSettings)
 add_library(Photobox::SettingsPlugin ALIAS PhotoboxSettingsplugin)
