--- a/EspHome/photobox-trigger-c6.yaml
+++ b/EspHome/photobox-trigger-c6.yaml
@@ -2,7 +2,7 @@ esphome:
   name: photobox-trigger
 
 esp32:
-  board: esp32-c6-devkitm-1
+  board: esp32-c6-devkitc-1
   variant: esp32c6
   framework:
     type: esp-idf
@@ -11,11 +11,17 @@ esp32:
 
 # Enable logging
 logger:
+  level: DEBUG
 
 wifi:
-  ssid: "photobox"
-  password: "photobox-matnel"
-  fast_connect: true
+  ssid: "Fotobox"
+  password: ""
+  fast_connect: true  
+  ap:
+    ssid: "Photobox trigger fallback"
+    password: ""
+
+captive_portal:
 
 
 web_server:
@@ -25,7 +31,7 @@ web_server:
 binary_sensor:
   - platform: gpio
     pin:
-      number: GPIO3
+      number: GPIO23
       inverted: true
       mode:
         input: true
