--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -5,13 +5,13 @@ include(Catch)
 
 add_executable(tests
     main.cpp
-    CollageRendererTest.cpp
-    TestEspHomeRemoteTrigger.cpp
-    pixel_match.cpp
-    pixel_match.hpp
+   # CollageRendererTest.cpp
+   # TestEspHomeRemoteTrigger.cpp
+   # pixel_match.cpp
+   # pixel_match.hpp
     ProjectTest.cpp
 )
-add_subdirectory(CaptureSessions)
+#add_subdirectory(CaptureSessions)
 target_link_libraries(tests PRIVATE
     Qt6::Test
     Catch2::Catch2
