--- a/.github/workflows/FlatpakBuild.yml
+++ b/.github/workflows/FlatpakBuild.yml
@@ -9,7 +9,7 @@ jobs:
     name: "Flatpak"
     runs-on: ubuntu-latest
     container:
-      image: bilelmoussaoui/flatpak-github-actions:kde-6.7
+      image: ghcr.io/flathub-infra/flatpak-github-actions:kde-6.9
       options: --privileged
     strategy:
       matrix:
@@ -27,7 +27,7 @@ jobs:
         uses: docker/setup-qemu-action@v3
         with:
           platforms: arm64
-      - uses: flathub-infra/flatpak-github-actions/flatpak-builder@master
+      - uses: flatpak/flatpak-github-actions/flatpak-builder@v6
         with:
           bundle: photobox.flatpak
           manifest-path: de.matnel.photobox.yaml
