--- a/de.matnel.photobox.Devel.yaml
+++ b/de.matnel.photobox.Devel.yaml
@@ -31,6 +31,7 @@ modules:
       - -DCMAKE_BUILD_TYPE=RelWithDebInfo
       - -DCPM_LOCAL_PACKAGES_ONLY=ON
       - -DBUILD_TESTING=ON
+      - -DCPM_DONT_UPDATE_MODULE_PATH=ON
     sources:
       - type: dir
         path: .
