--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,12 +16,23 @@ include(GenerateExportHeader)
 include(Options)
 
 declare_photobox_options()
+
+find_package(Threads REQUIRED)
+CPMAddPackage("gh:chriskohlhoff/asio#asio-1-34-2")
+add_library(asio INTERFACE)
+add_library(asio::asio ALIAS asio)
+target_include_directories(asio SYSTEM INTERFACE ${asio_SOURCE_DIR}/asio/include)
+target_compile_definitions(asio INTERFACE ASIO_STANDALONE ASIO_NO_DEPRECATED)
+target_link_libraries(asio INTERFACE Threads::Threads)
+
 CPMAddPackage(URI "gh:sammycage/lunasvg@3.3.0" OPTIONS "LUNASVG_BUILD_EXAMPLES OFF")
 CPMAddPackage("gh:fmtlib/fmt#11.2.0")
 CPMAddPackage(NAME "nlohmann_json" VERSION 3.12.0 GITHUB_REPOSITORY "nlohmann/json")
 CPMAddPackage(URI "gh:jeremy-rifkin/cpptrace@1.0.3" OPTIONS "CPPTRACE_UNWIND_WITH_LIBUNWIND ON")
 CPMAddPackage(URI "gh:NVIDIA/stdexec#2674bebb8389ce2faaadbea9c1d230b98ee56770" OPTIONS "STDEXEC_BUILD_TESTS OFF" "STDEXEC_BUILD_EXAMPLES OFF" "STDEXEC_ENABLE_ASIO ON" "STDEXEC_ASIO_IMPLEMENTATION standalone")
 CPMAddPackage(URI "gh:odygrd/quill@10.0.1" OPTIONS "QUILL_DISABLE_NON_PREFIXED_MACROS OFF")
+
+
 
 if(BUILD_TESTING)
     CPMAddPackage("gh:catchorg/Catch2@3.8.1")
