--- a/de.matnel.photobox.yaml
+++ b/de.matnel.photobox.yaml
@@ -30,6 +30,11 @@ modules:
       - -DCMAKE_BUILD_TYPE=RelWithDebInfo
       - -DCPM_LOCAL_PACKAGES_ONLY=ON
       - -DBUILD_TESTING=OFF
+      - -DCPM_asio_SOURCE=../deps/asio
     sources:
+      - type: git
+        url: https://github.com/chriskohlhoff/asio.git
+        tag: asio-1-34-2
+        dest: deps/asio
       - type: dir
         path: .
