use boost and repair the flatpak finally

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,19 +16,22 @@ include(GenerateExportHeader)
 include(Options)
 
 declare_photobox_options()
-find_package(Threads REQUIRED)
-CPMAddPackage("gh:chriskohlhoff/asio#asio-1-34-2")
-add_library(asio INTERFACE)
-add_library(asio::asio ALIAS asio)
-target_include_directories(asio SYSTEM INTERFACE ${asio_SOURCE_DIR}/asio/include)
-target_compile_definitions(asio INTERFACE ASIO_STANDALONE ASIO_NO_DEPRECATED)
-target_link_libraries(asio INTERFACE Threads::Threads)
 
+set(BOOST_VERSION "1.88.0")
+list(APPEND BOOST_INCLUDE_LIBRARIES asio)
+CPMAddPackage(
+  NAME Boost
+  VERSION ${BOOST_VERSION}
+  URL https://github.com/boostorg/boost/releases/download/boost-${BOOST_VERSION}/boost-${BOOST_VERSION}-cmake.tar.xz
+  URL_HASH SHA256=f48b48390380cfb94a629872346e3a81370dc498896f16019ade727ab72eb1ec
+  OPTIONS "BOOST_ENABLE_CMAKE ON" "BOOST_SKIP_INSTALL_RULES ${CMAKE_SKIP_INSTALL_RULES}"
+  FIND_PACKAGE_ARGUMENTS "GLOBAL CONFIG REQUIRED NAMES Boost-${BOOST_VERSION} CONFIGS BoostConfig.cmake"
+)
 CPMAddPackage(URI "gh:sammycage/lunasvg@3.3.0" OPTIONS "LUNASVG_BUILD_EXAMPLES OFF")
 CPMAddPackage("gh:fmtlib/fmt#11.2.0")
 CPMAddPackage(NAME "nlohmann_json" VERSION 3.12.0 GITHUB_REPOSITORY "nlohmann/json")
 CPMAddPackage(URI "gh:jeremy-rifkin/cpptrace@1.0.3" VERSION 1.0.2 OPTIONS "CPPTRACE_UNWIND_WITH_LIBUNWIND ON" FIND_PACKAGE_ARGUMENTS "CONFIG")
-CPMAddPackage(URI "gh:NVIDIA/stdexec#dd8bd6be263efac9da5bed20caf999e3a112440f" VERSION 0.9.0 OPTIONS "STDEXEC_BUILD_TESTS OFF" "STDEXEC_BUILD_EXAMPLES OFF" "STDEXEC_ENABLE_ASIO ON" "STDEXEC_ASIO_IMPLEMENTATION standalone" FIND_PACKAGE_ARGUMENTS "CONFIG")
+CPMAddPackage(URI "gh:NVIDIA/stdexec#dd8bd6be263efac9da5bed20caf999e3a112440f" VERSION 0.9.0 OPTIONS "CPM_LOCAL_PACKAGES ON" "STDEXEC_BUILD_TESTS OFF" "STDEXEC_BUILD_EXAMPLES OFF" "STDEXEC_ENABLE_ASIO ON" "STDEXEC_ASIO_IMPLEMENTATION boost" FIND_PACKAGE_ARGUMENTS "CONFIG")
 CPMAddPackage(URI "gh:odygrd/quill@10.0.1" OPTIONS "QUILL_DISABLE_NON_PREFIXED_MACROS OFF")
 
 if(BUILD_TESTING)
