--- a/Flatpak/stdexec.yaml
+++ b/Flatpak/stdexec.yaml
@@ -4,6 +4,8 @@ builddir: false
 config-opts:
   - -DSTDEXEC_BUILD_TESTS=OFF
   - -DSTDEXEC_BUILD_EXAMPLES=OFF
+  - -DSTDEXEC_ENABLE_ASIO=ON
+  - -DSTDEXEC_ASIO_IMPLEMENTATION=boost
   - -DCMAKE_BUILD_TYPE=Release
   - -DFETCHCONTENT_FULLY_DISCONNECTED=ON
   - -DFETCHCONTENT_SOURCE_DIR_RAPIDS-CMAKE=deps/rapids-cmake
