--- a/de.matnel.photobox.Devel.yaml
+++ b/de.matnel.photobox.Devel.yaml
@@ -13,6 +13,7 @@ finish-args:
   - --device=all
   - --filesystem=host
 modules:
+  - Flatpak/boost.yaml
   - Flatpak/lunasvg.yaml
   - Flatpak/fmt.yaml
   - Flatpak/json.yaml
@@ -24,7 +25,7 @@ modules:
   - Flatpak/quill.yaml
   - Flatpak/catch2.yaml
 
-  - name: DigitalerApp
+  - name: PhotoboxApp
     buildsystem: cmake-ninja
     builddir: true
     config-opts:
