--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -5,10 +5,10 @@
 add_executable(
     tests
     main.cpp
-    # CollageRendererTest.cpp
+    CollageRendererTest.cpp
     # TestEspHomeRemoteTrigger.cpp
-    # pixel_match.cpp
-    # pixel_match.hpp
+    pixel_match.cpp
+    pixel_match.hpp
 )
 #add_subdirectory(CaptureSessions)
 target_link_libraries(
