--- a/Photobox/App/CMakeLists.txt
+++ b/Photobox/App/CMakeLists.txt
@@ -11,9 +11,11 @@ target_link_libraries(
         Qt6::Gui
         Qt6::Qml
         Qt6::Quick
+        Qt6::QuickControls2
         Qt6::PrintSupport
         Photobox::Core
         Photobox::CorePlugin
+        Photobox::Settings
         Photobox::SettingsPlugin
         PhotoboxUiplugin
         PhotoboxPeripheral
