feat: move single session into own lib

--- a/Photobox/Settings/CMakeLists.txt
+++ b/Photobox/Settings/CMakeLists.txt
@@ -33,6 +33,7 @@ target_link_libraries(
         Photobox::Core
         Photobox::Peripheral
         Photobox::CollageSession
+        Photobox::SingleSession
 )
 
 if(BUILD_TESTING)
