--- a/Photobox/GPhoto2/CMakeLists.txt
+++ b/Photobox/GPhoto2/CMakeLists.txt
@@ -4,21 +4,26 @@
 
 add_library(PhotoboxGPhoto2 STATIC)
 add_library(Photobox::GPhoto2 ALIAS PhotoboxGPhoto2)
-target_link_libraries(
-    PhotoboxGPhoto2
-    PUBLIC Qt6::Gui Photobox::Logging STDEXEC::stdexec PkgConfig::gphoto2
-)
-
-target_include_directories(PhotoboxGPhoto2 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-
+target_link_libraries(PhotoboxGPhoto2 PUBLIC Photobox::Core)
 target_sources(
     PhotoboxGPhoto2
+    PUBLIC
+        FILE_SET headers
+            TYPE HEADERS
+            BASE_DIRS Include
+            FILES
+                Include/Pbox/GPhoto2Camera.hpp
+                Include/Pbox/GPhoto2Exeption.hpp
     PRIVATE
-        GPhoto2Context.cpp
-        GPhoto2Context.hpp
-        GPhoto2Wrapper.hpp
-        GPhoto2Wrapper.cpp
-        GPhoto2Integration.hpp
-        GPhoto2Integration.cpp
-        GPhoto2Exeption.hpp
+        Source/GPhoto2Camera.cpp
+        Source/GPhoto2Context.cpp
+        Source/GPhoto2Context.hpp
+        Source/GPhoto2Integration.cpp
+        Source/GPhoto2Integration.hpp
+        Source/GPhoto2Wrapper.cpp
+        Source/GPhoto2Wrapper.hpp
+)
+target_link_libraries(
+    PhotoboxGPhoto2
+    PUBLIC Photobox::Logging Photobox::Core PkgConfig::gphoto2
 )
