--- a/.github/workflows/PrValidation.yml
+++ b/.github/workflows/PrValidation.yml
@@ -15,6 +15,6 @@ jobs:
       - uses: flatpak/flatpak-github-actions/flatpak-builder@v6
         with:
           bundle: photobox.flatpak
-          manifest-path: de.matnel.photobox.Devel.yaml
+          manifest-path: de.matnel.photobox.yaml
           cache-key: flatpak-builder-${{ github.sha }}
-          run-tests: true
+          run-tests: false
